# serializer version: 1
# name: test_streamk_pap_cluster_multicast_gfx1250_golden[cs2_ck2]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArg0FjDpa9Y5py1LW1fl8x5GA_e-2S_SVTfFhcimIf6sDI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArgVQRt96Qonzs_hUJQ9DdeEQHpDG0-bMQgi4qeK_BPbiE=',
      'err': 0,
    }),
  ])
# ---
# name: test_streamk_pap_cluster_multicast_gfx1250_golden[cs4_ck1]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArgQv1zvQ0hS3iyq4x_DOI3OcGgs6THnvSDRqLgdFhi4Hw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArgvRwKrkoyNAGkIdcte7uGPnT0cyMznDeL0g6Ru-s_oJQ=',
      'err': 0,
    }),
  ])
# ---
